--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 100vh;
+    min-height: min(100vh, 1080px);
     padding-top: min(12vh, 120px);
 }
 
